--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "mysportsfeeds-node": "^2.0.1",
     "nodemon": "^1.19.1"
   }
 }
