--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,9 @@
     "license": "ISC",
     "dependencies": {
         "await-to-js": "^2.1.1",
+        "axios": "^0.19.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
-        "mysportsfeeds-node": "^2.0.1",
         "parse-error": "^0.2.0"
     },
     "devDependencies": {
