--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.19.2",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
