Modified run scripts for Heroku deployment

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "nba-score",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3005",
   "dependencies": {
     "antd": "^3.19.2",
     "axios": "^0.19.0",
