--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "nba-score-app",
     "version": "1.0.0",
+    "engines": {
+        "node": "10.10.0"
+    },
     "description": "",
     "main": "index.js",
     "scripts": {
